# acow_algo

./: CMakeLists.txt
acow/: algo.h
acow/include/: acow.h  something.h  std.h
